--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@reduxjs/toolkit": "^2.2.6",
     "@uiw/codemirror-theme-copilot": "^4.22.0",
     "@uiw/react-codemirror": "^4.22.0",
     "@uiw/react-markdown-editor": "^6.1.1",
