--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@babel/parser": "^7.25.6",
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.6",
     "classnames": "^2.5.1",
@@ -19,7 +20,9 @@
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "vscode-css-languageservice": "^6.3.1",
+    "vscode-html-languageservice": "^5.3.1"
   },
   "devDependencies": {
     "@types/htmlhint": "^1.1.5",
