--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@monaco-editor/react": "^4.6.0",
     "@reduxjs/toolkit": "^2.2.6",
     "classnames": "^2.5.1",
+    "debounce": "^2.1.1",
     "handlebars": "^4.7.8",
     "htmlhint": "^1.1.4",
     "react": "^18.2.0",
