--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.2.6",
     "classnames": "^2.5.1",
     "debounce": "^2.1.1",
+    "emmet-monaco-es": "^5.4.0",
     "handlebars": "^4.7.8",
     "htmlhint": "^1.1.4",
     "react": "^18.2.0",
