--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.0",
     "redux": "^5.0.1",
+    "stylelint": "^16.9.0",
     "vscode-css-languageservice": "^6.3.1",
     "vscode-html-languageservice": "^5.3.1"
   },
