--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,14 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "baseUrl": ".",
+       "paths": {
+         "@/*": ["src/*"],
+         "@components/*": ["src/components/*"],
+         "@utils/*": ["src/utils/*"],
+         "@store/*": ["src/store/*"]
+       }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
