fix husky pre-commit + eslint+prettier

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,13 +20,16 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "baseUrl": ".",
-       "paths": {
-         "@/*": ["src/*"],
-         "@components/*": ["src/components/*"],
-         "@utils/*": ["src/utils/*"],
-         "@store/*": ["src/store/*"]
-       }
+    "paths": {
+      "@/*": ["src/*"],
+      "@components/*": ["src/components/*"],
+      "@utils/*": ["src/utils/*"],
+      "@store/*": ["src/store/*"]
+    }
   },
-  "include": ["src"],
+  "include": [
+    "src/**/*",
+    "vite.config.ts" // Добавьте эту строку
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
