--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "format": "prettier --write \"src/**/*.{ts,tsx,scss,css,json}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx,scss,css,json}\"",
     "type-check": "tsc --noEmit",
-    "validate": "npm run lint && npm run type-check && npm run format:check"
+    "validate": "npm run lint && npm run type-check && npm run format:check",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@babel/parser": "^7.25.6",
@@ -48,7 +49,7 @@
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "husky": "^9.1.7",
+    "husky": "^8.0.0",
     "lint-staged": "^15.4.3",
     "prettier": "^3.5.1",
     "sass": "^1.75.0",
