--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.7",
     "emmet-monaco-es": "^5.4.0",
     "handlebars": "^4.7.8",
+    "html-to-text": "^9.0.5",
     "htmlhint": "^1.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -35,6 +36,7 @@
     "vscode-html-languageservice": "^5.3.1"
   },
   "devDependencies": {
+    "@types/html-to-text": "^9.0.4",
     "@types/htmlhint": "^1.1.5",
     "@types/node": "^22.13.4",
     "@types/react": "^18.2.66",
