--- a/package.json
+++ b/package.json
@@ -45,15 +45,15 @@
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "eslint": "^8.57.0",
-    "eslint-config-prettier": "^10.0.2",
+    "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-prettier": "^5.2.6",
     "eslint-plugin-react": "^7.37.4",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "husky": "^8.0.0",
     "lint-staged": "^15.4.3",
-    "prettier": "^3.5.1",
+    "prettier": "3.5.3",
     "sass": "^1.75.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
