--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
+    "react-resizable-panels": "^3.0.2",
     "react-router-dom": "^6.23.0",
     "redux": "^5.0.1",
     "save-dev": "^0.0.1-security",
